--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <section id="skill" class="w-screen mx-auto py-4 bg-white">
       <div class="flex flex-wrap">
         <div class="w-full md:w-4/12 ml-auto mr-auto px-4">
-          <img src="/mevn.jpg" class="max-w-full rounded-lg drop-shadow-lg" />
+          <img src="./mevn.jpg" class="max-w-full rounded-lg drop-shadow-lg" />
         </div>
         <div class="w-full md:w-5/12 ml-auto mr-auto px-4 bg-white">
           <div class="md:pr-12">
@@ -212,7 +212,7 @@
         <div class="grid mb-5 grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 m-8">
           <div class="bg-white px-4 py-4 m-2 shadow-lg rounded">
             <img
-              src="/pexels-christina-morillo-1181298.jpg"
+              src="./pexels-christina-morillo-1181298.jpg"
               class="w-full rounded-lg"
               alt=""
             />
@@ -234,7 +234,7 @@
           </div>
           <div class="bg-white px-4 py-4 m-2 shadow-lg rounded">
             <img
-              src="/pexels-christina-morillo-1181675.jpg"
+              src="./pexels-christina-morillo-1181675.jpg"
               class="w-full rounded-lg"
               alt=""
             />
@@ -256,7 +256,7 @@
           </div>
           <div class="bg-white px-4 py-4 m-2 shadow-lg rounded">
             <img
-              src="/pexels-cottonbro-studio-4709285.jpg"
+              src="./pexels-cottonbro-studio-4709285.jpg"
               class="w-full rounded-lg"
               alt=""
             />
@@ -278,7 +278,7 @@
           </div>
           <div class="bg-white px-4 py-4 m-2 shadow-lg rounded">
             <img
-              src="/pexels-negative-space-34600.jpg"
+              src="./pexels-negative-space-34600.jpg"
               class="w-full rounded-lg"
               alt=""
             />
